# bct-web

./: .gitignore  manage.py  pyproject.toml
authentication/: urls.py
authentication/templates/authentication/: login.html  logout.html
bct/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: base.css
templates/: base.html  base_full.html
tournament/: admin.py  consumers.py  models.py  routing.py  tests.py  urls.py  views.py
tournament/migrations/: 0001_initial.py  0002_game_alter_team_options_remove_team_score_program_and_more.py  0003_remove_team_name_team_user.py  0004_program_game.py  0005_alter_result_error.py  0006_game_description.py  0007_remove_team_user_team_name_player.py  0008_game_tag.py  0009_alter_game_tag.py
tournament/templates/tournament/: homepage.html  leaderboard.html  rules.html
